tests/paczka1/fuzzy1/80745498.err
Error in line 23: ZsN A404 138,77
Error in line 22: A673 A404 7,1
Error in line 24: A673 A673 0,1
Error in line 20: rCdvNe S953 187,0
Error in line 27: A673 A404 34,5
